# etl-data-testing

./: .env.example  .gitignore  README.md  pyproject.toml
src/etl_testing/: __init__.py  cli.py  config.py  pipeline.py  reporting.py
src/etl_testing/checks/: __init__.py  models.py  runner.py
src/etl_testing/connectors/: __init__.py  coalesce_connector.py  fivetran_connector.py  powerbi_connector.py  snowflake_connector.py
tests/: conftest.py  test_check_runner.py  test_data_quality.py  test_models.py
tests/configs/: sample_tests.yaml
